[package]
authors = ["RENEC developers <dev@remitano.com>"]
description = "SPL Token Lending CLI"
edition = "2018"
homepage = "https://remitano.com/renec"
license = "Apache-2.0"
name = "spl-token-lending-cli"
repository = "https://github.com/remitano/renec-program-library"
version = "0.1.0"

[dependencies]
clap = "2.33.3"
solana-clap-utils = "1.7.11"
renec-cli-config = { version = "1.8.14", path = "../../cli-config" }
solana-client = "1.7.11"
solana-logger = "1.7.11"
solana-sdk = "1.7.11"
solana-program = "1.7.11"
spl-token-lending = { path="../program", features = [ "no-entrypoint" ] }
spl-token = { path="../../token/program", features = [ "no-entrypoint" ]  }

[[bin]]
name = "spl-token-lending"
path = "src/main.rs"
