[package]
name = "spl-token-swap-fuzz"
version = "0.0.1"
description = "Solana Program Library Token Swap Fuzzer"
authors = ["RENEC developers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec-program-library"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
honggfuzz = { version = "0.5.52" }
arbitrary = { version = "0.4", features = ["derive"] }
solana-program = "1.7.11"
spl-math = { version = "0.1", path = "../../../libraries/math", features = [ "no-entrypoint" ] }
spl-token = { version = "3.2", path = "../../../token/program", features = [ "no-entrypoint" ] }
spl-token-swap = { path = "..", features = ["fuzz", "no-entrypoint"] }

[[bin]]
name = "token-swap-instructions"
path = "src/instructions.rs"
test = false
doc = false
